Quote text alignment fixed to be center
Quote text box was previously using padding to center instead of
using justify-content. Has now been fixed.

--- a/styles.css
+++ b/styles.css
@@ -115,15 +115,16 @@ body {
 .quotebackground {
     background-color: #E5E7EB;
     height: 300px;
+    display: flex;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin: 0 auto;
     max-width: 630px;
-    padding-top: 60px;
+    text-align: center;
+    justify-content: center;
 }
 
 .quotetext {
@@ -131,9 +132,8 @@ body {
     color: #1f2937;
     display: flex;
     max-width: 650px;
-    text-align: center;
     font-style: italic;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .quotesubtext {
